--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -11,10 +11,12 @@ page-home {
         .login_form{
             margin-left: auto;
             margin-right: auto;
+            margin-top: 10vh;
             width: 75vw;
-            opacity: $opacity;
+            opacity: 1;
             background-color: white;
         }
+
     }
 
 }
